# rag_basics

./: README.md  pyproject.toml
src/: index_documents.py  query_retrieve.py
